--- a/README.org
+++ b/README.org
@@ -1,13 +1,16 @@
-* Geb Presentation
-* Quick Start
+#+EXPORT_EXCLUDE_TAGS: nopub
+#+TITLE:Geb
+* Geb
+** Installation
+- Recommended Groovy Version 1.7.5
+- I've tested on Ubuntu Linux, other OSs to follow
+- For this demo, you need Firefox installed
+** Quick Start
+Run this from the Groovy Console
 :PROPERTIES:
 :ID: a46d05d4-6d01-494d-833d-7245ccf530b9
 :END:
-- Recommended Groovy Version 1.7.5
-http://groovy.codehaus.org/Download
-- Firefox needs to be installed for this demo
-- Run this from Groovy Console
-#+begin_src groovy :tangle enrollioExample.groovy
+#+BEGIN_SRC groovy
   @Grapes([
               @Grab("org.codehaus.geb:geb-core:latest.release"),
               @Grab("org.seleniumhq.selenium:selenium-firefox-driver:latest.release")
@@ -17,28 +20,21 @@ http://groovy.codehaus.org/Download
   Browser.drive("http://enrollio.org") {
       assert title == "Help - About"
   }
-#+end_src
-* Breakdown
-:PROPERTIES:
-:ID: 23b1e0d9-75c7-427e-83a9-b22572f2d44e
-:END:
-* Grapes pulls down necessary code.  This is a mystery how it works for me.
-:PROPERTIES:
-:ID: decdc638-cc04-485e-9d6a-593c783c969a
-:END:
-#+begin_src groovy :tangle enrollioExample2.groovy
- @Grapes([
-              @Grab("org.codehaus.geb:geb-core:latest.release"),
-              @Grab("org.seleniumhq.selenium:selenium-firefox-driver:latest.release")
-  ])
+#+END_SRC
 
-#+end_src
+- Grapes pulls down dependency goodies.  How it works is beyond me.
+- Selenium runs under the hood, and creates an instance of the specified browser.
 
-* Basic enclosure for running a test.
+** Geb Test Skeleton                                                 :nopub:
 :PROPERTIES:
 :ID: df2c04db-2a1f-40d7-9884-f44886a25ede
 :END:
-#+begin_src groovy :tangle enrollioExample2.groovy :noweb tangle
+#+begin_src groovy :tangle advancedTest.groovy :noweb tangle
+#!/bin/env groovy
+@Grapes([
+              @Grab("org.codehaus.geb:geb-core:latest.release"),
+              @Grab("org.seleniumhq.selenium:selenium-firefox-driver:latest.release")
+])
 import geb.Browser
 Browser.drive("http://enrollio.org") {
     <<simpleTests>>
@@ -46,41 +42,51 @@ Browser.drive("http://enrollio.org") {
     <<simpleTestsRelationships>>
 }
 #+end_src
-* CSS / Jquery like syntax for selecting HTML elements
+** CSS / Jquery like syntax for selecting HTML elements
 :PROPERTIES:
 :ID: 812abad7-d35f-4336-af83-b62b202e0592
 :END:
 #+srcname: simpleTests
 #+begin_src groovy :noweb tangle
- assert title == "Help - About"
- // Simple testing for presence of an element.
- // Jquery selectors bring back a list of matches
- assert $("a", text:"Loooogin").size() == 0
- assert $("a", text:"Login").size() == 1
+assert $("a", text:"Loooogin").size() == 0
+assert $("a", text:"Login").size() == 1
 #+end_src
 
-Test results are some kind of instance of selenium's FirefoxWebElement (if you're using Firefox Driver)
+Test results are some kind of instance of selenium's FirefoxWebElement
+(if you're using Firefox Driver)
+
 http://webdriver.googlecode.com/svn/javadoc/org/openqa/selenium/firefox/FirefoxWebElement.html
 
-* Attirbute Selectors
-The two tests below are the same.  Both of them match
+** Attribute Selectors
+Say we have the following HTML:
 
 #+begin_src html
 <h3 class="reallynow">Thanks</h3>
 #+end_src
 
+Here's the Geb code we need to match the HTML.  (Both expressions match)
+
 #+srcname: simpleTestsAttributes
 #+begin_src groovy :noweb tangle
     assert $("h3", class: "reallynow", text: "Thanks").size() == 1
     assert $("h3.reallynow", text: "Thanks").size() == 1
-    
-
-
 #+end_src
 
-* Relationships
+** Testing Relationships
+Here we have a <p> element that's right next to an h3 which has the
+version of our software.  We can make sure the website shows the
+correct version.
+
+#+begin_src html
+<h3 class="reallynow">Version</h3>
+<p>Version 0.2 "Dangle"</p>
+#+end_src
+
 #+srcname: simpleTestsRelationships
 #+begin_src groovy :noweb tangle
 assert $("h3.reallynow").siblings("p").find { it.text =~/Dangle/)
-
+assert $("h3.reallynow").siblings("p").find { it.text =~/0.2/)
 #+end_src
+
+* See Also
+- Geb
