--- a/README.org
+++ b/README.org
@@ -1,5 +1,6 @@
 #+EXPORT_EXCLUDE_TAGS: nopub
 #+TITLE:Geb
+
 * Geb
 ** Installation
 - Recommended Groovy Version 1.7.5
@@ -86,6 +87,10 @@ correct version.
 assert $("h3.reallynow").siblings("p").find { it.text() =~/Dangle/ }
 assert $("h3.reallynow").siblings("p").find { it.text() =~/0\.2/ }
 #+end_src
+
+* Moving Along
+- Need to find out how to get more descriptive test results when running simple tests.
+- Would need to replicate a lot of code when running similar tests
 
 * See Also
 - Geb
