--- a/README.org
+++ b/README.org
@@ -75,16 +75,16 @@ assert $("h3.reallynow").siblings("p").find { it.text() =~/Dangle/ }
 assert $("h3.reallynow").siblings("p").find { it.text() =~/0\.2/ }
 #+end_src
 ** Forms / Interaction
-#+srcname: loginFormFailure
-#+begin_src groovy :noweb tangle
+#+begin_src groovy :tangle testLoginFailure.groovy :noweb tangle
+<<header>>
 $("a", text:"Login").click()
 $("#loginForm").username = "badguy"
 $("#loginForm").password = "badguypassword"
 $("#login").click()
 assert title == "Login"
 assert $("*", text: ~/.*Invalid.*username.*password/).size() > 0
+<<footer>>
 #+end_src
-
 ** Successful Login
 :PROPERTIES:
 :ID: 87777828-2f37-46d9-b183-fa837a521e38
