--- a/README.org
+++ b/README.org
@@ -179,11 +179,17 @@ assert $("*", text: ~/.*Invalid.*username.*password/).size() > 0
               @Grab("org.seleniumhq.selenium:selenium-firefox-driver:latest.release")
 ])
 import geb.Browser
-Browser.drive("http://enrollio.org") {
+try {
+    Browser.drive("http://enrollio.org") {
 #+end_src
 
 #+srcname: footer
 #+begin_src groovy
+    }
+}
+catch (geb.error.DriveException dex) { 
+    dex.printStackTrace() 
+    System.exit(1)
 }
 #+end_src
 * Moving Along
